# ai-auto-publisher

./: .env.example  .gitignore  README.md  pyproject.toml
.codebuddy/skills/ai-auto-publisher/: SKILL.md
.codebuddy/skills/ai-auto-publisher/references/: api_reference.md
agents/content-publisher/: content-adapter-agent.md  main.md  publish-executor-agent.md  status-tracker-agent.md
agents/content-publisher/writing-styles/: dan-koe-style.md  james-clear-style.md  paul-graham-style.md
context/: architecture-decisions.md  review-findings.md
docs/: knot-integration-guide.md  platform-api-reference.md  research-report.md
scripts/: run.py
skills/ai-auto-publisher/: SKILL.md
src/: __init__.py  config.py  models.py  publisher_hub.py
src/api/: __init__.py  routes.py
src/mcp_server/: __init__.py  server.py
src/publishers/: __init__.py  base.py  playwright_publisher.py  twitter_publisher.py  wechat_mp_publisher.py  wechatsync_publisher.py
src/storage/: __init__.py  database.py
tests/: test_api.py  test_database.py  test_integration.py  test_publishers.py
